--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buffer-crc32": "^0.2.13",
     "commander": "^8.3.0",
     "concat-map": "^0.0.1",
+    "data-world-api": "file:../../dwApiNode",
     "debug": "^4.3.3",
     "end-of-stream": "^1.4.4",
     "escape-string-regexp": "^2.0.0",
